--- a/package.json
+++ b/package.json
@@ -38,9 +38,13 @@
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@storybook/preset-scss": "^1.0.3",
     "@svgr/webpack": "^5.5.0",
+    "bulma": "^0.9.2",
     "css-loader": "^5.2.4",
+    "nuka-carousel": "^4.7.8",
     "react": "^17.0.2",
+    "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.5.3",
     "rollup": "^2.46.0",
     "sass": "^1.32.12",
     "sass-loader": "^11.0.1",
